--- a/index.html
+++ b/index.html
@@ -1,10 +1,34 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>dev-blog-yeonaa</title>
+
+    <!-- Primary Meta Tags -->
+    <title>My Dev Blog - 개발 블로그</title>
+    <meta name="title" content="My Dev Blog - 개발 블로그" />
+    <meta name="description" content="JavaScript, TypeScript, React, Firebase 등 웹 개발 기술에 대한 블로그입니다. 개발 경험과 지식을 공유합니다." />
+    <meta name="keywords" content="개발 블로그, JavaScript, TypeScript, React, Firebase, 웹 개발, 프론트엔드" />
+    <meta name="author" content="Somy" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dev-blog-somy.web.app/" />
+    <meta property="og:title" content="My Dev Blog - 개발 블로그" />
+    <meta property="og:description" content="JavaScript, TypeScript, React, Firebase 등 웹 개발 기술에 대한 블로그입니다." />
+    <meta property="og:locale" content="ko_KR" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dev-blog-somy.web.app/" />
+    <meta property="twitter:title" content="My Dev Blog - 개발 블로그" />
+    <meta property="twitter:description" content="JavaScript, TypeScript, React, Firebase 등 웹 개발 기술에 대한 블로그입니다." />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)" />
+    <meta name="theme-color" content="#0a0a0a" media="(prefers-color-scheme: dark)" />
   </head>
   <body>
     <div id="root"></div>
